<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AAPxIDE</string>
    <string name="hello_world">Hello, World!</string>
	<string name="project_manager">Project Manager</string>
	<string name="text_editor">Text Editor</string>
    <string name="ui_editor">Layout Editor</string>
	<string name="project_options">Project Options</string>
	<string name="project_options_desc">Choose an option for project </string>
    <string name="create_project_dialog_title">Create new project</string>
    <string name="create_project_dialog_appname">App name</string>
    <string name="create_project_dialog_packagename">Package name</string>
    <string name="create_project_dialog_okbutton">Create</string>
	<string name="ok">Ok</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="delete">Delete</string>
	<string name="backup">Backup</string>
	<string name="compile">Compile</string>
	<string name="about">About</string>
	<string name="settings">Settings</string>
	<string name="replace">Replace with...</string>
	<string name="search">Search...</string>
	<string name="ui_editor_preview_placeholder">No Views added yet.\nClick here to add Views and Widgets...</string>
    <string name="ui_editor_toolbar_undo">Undo</string>
    <string name="ui_editor_toolbar_redo">Redo</string>
    <string name="ui_editor_toolbar_save">Save</string>
	<string name="delete_project">Delete Project</string>
	<string name="backup">Backup...</string>
	<string name="file_explorer">Project Explorer</string>
</resources>
