<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<com.google.android.material.appbar.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/Theme.AppBarOverlay">

		<androidx.appcompat.widget.Toolbar
			android:id="@+id/my_toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			android:elevation="4dp"
			android:theme="@style/Theme.AppBarOverlay"
			app:title="@string/app_name"
			app:subtitle="@string/ui_editor"
			app:popupTheme="@style/Theme.PopupOverlay"/>

	</com.google.android.material.appbar.AppBarLayout>

	<LinearLayout
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:id="@+id/background"
		android:orientation="vertical"
		android:gravity="center">

		<LinearLayout
			android:layout_height="0dp"
			android:layout_width="0dp"
			android:orientation="vertical"
			android:id="@+id/screen_preview"
			android:elevation="4dp"
            android:background="#333333">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center"
                android:text="@string/ui_editor_preview_placeholder"/>
            
		</LinearLayout>

	</LinearLayout>

</LinearLayout>

